--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           args: >
             -Dsonar.projectKey=dpoljak7_spring-poc
-            -Dsonar.organization=dpoljak7_spring-poc
+            -Dsonar.organization=dpoljak7
             -Dsonar.java.binaries=target/classes
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
