--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
         <java.version>17</java.version>
         <cucumber.version>7.21.1</cucumber.version>
         <mapstruct.version>1.6.3</mapstruct.version>
+
+        <sonar.organization>dpoljak7</sonar.organization>
+        <sonar.projectKey>dpoljak7_spring-poc</sonar.projectKey>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
@@ -334,7 +338,11 @@
                     </includes>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>4.0.0.4121</version>
+            </plugin>
         </plugins>
     </build>
 </project>
