--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <sonar.organization>dpoljak7</sonar.organization>
         <sonar.projectKey>dpoljak7_spring-poc</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
     <dependencies>
         <dependency>
